MCA App/Release/MCA Dev Org/src/objects/Payment__c.object
<CustomObject>
    <fields>
        <fullName>ACH_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ACH Batch</label>
        <referenceTo>ACH_Batch__c</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Repayment__r.Payee_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Payer Account on Payment Setting (Formula)</inlineHelpText>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <formula>Repayment__r.Total_Outstanding_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Check__c</fullName>
        <label>Check #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <inlineHelpText>Effective Date</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Transaction_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Transaction ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fees__c</fullName>
        <formula>IF(TEXT(Transaction_Type__c) =&quot;Fee&quot;, &quot;$&quot;&amp;TEXT(Transaction_Amount__c) ,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fees</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Funding Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Holdback_Amount__c</fullName>
        <label>Holdback Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holdback__c</fullName>
        <label>Holdback (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Is_Payment__c</fullName>
        <formula>ISPICKVAL( Transaction_Type__c , &apos;Payment&apos;)</formula>
        <label>Is Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Running_Balance_Applicable__c</fullName>
        <formula>ISPICKVAL(Status__c , &apos;Settled&apos;) || ISPICKVAL(Status__c , &apos;Fees Applied&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Running Balance Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <formula>Repayment__r.Memo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Memo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Id__c</fullName>
        <label>Merchant Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Name__c</fullName>
        <label>Merchant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Total_Amount__c</fullName>
        <label>Merchant Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Merchant_Total_Holdback__c</fullName>
        <label>Merchant Total Holdback</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <formula>Repayment__r.Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity Name from Payment Setting (Formula)</inlineHelpText>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Back__c</fullName>
        <inlineHelpText>This will show the % paid back at the time of this payment. (Original Payback Minus Balance divided by Original Payback)</inlineHelpText>
        <label>% Paid Back</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Formula__c</fullName>
        <formula>ABS( Transaction_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Split Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <formula>IF(Funding_Payment__c, &apos;Funding Payment&apos;, TEXT(Transaction_Type__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processed_Amount__c</fullName>
        <label>Processed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Processor_Integration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Processor Integration</label>
        <referenceTo>Processor_Integration__c</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Repayment__c</fullName>
        <label>Repayment</label>
        <referenceTo>Repayment__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Response_Code__c</fullName>
        <label>Response Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Running_Balance__c</fullName>
        <label>Running Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Settlement_Date__c</fullName>
        <label>Settlement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Settlement_Id__c</fullName>
        <label>Settlement Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Split Batch</label>
        <referenceTo>Split_Batch__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Amount__c</fullName>
        <formula>TEXT( Status__c) &amp;&quot;: $&quot;&amp; TEXT( Transaction_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status: Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Image__c</fullName>
        <formula>IF(ISPICKVAL(Status__c, &apos;Scheduled&apos;),  IMAGE(&apos;/img/msg_icons/info16.png&apos;, &apos;Scheduled&apos;) &amp; &apos; &apos; &amp; TEXT(Status__c), IF(ISPICKVAL(Status__c, &apos;Pending&apos;),  IMAGE(&apos;/img/msg_icons/info16.png&apos;, &apos;Pending&apos;) &amp; &apos; &apos; &amp; TEXT(Status__c), IF(ISPICKVAL(Status__c, &apos;Settled&apos;),  IMAGE(&apos;/img/msg_icons/confirm16.png&apos;, &apos;Settled&apos;) &amp; &apos; &apos; &amp; TEXT(Status__c), IF(ISPICKVAL(Status__c, &apos;Failed&apos;),  IMAGE(&apos;/img/msg_icons/error16.png&apos;, &apos;Failed&apos;) &amp; &apos; &apos; &amp; TEXT(Status__c), IF(ISPICKVAL(Status__c, &apos;Fees Applied&apos;),  IMAGE(&apos;/img/msg_icons/confirm16.png&apos;, &apos;Fees Applied&apos;) &amp; &apos; &apos; &amp; TEXT(Status__c), &apos;&apos;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Scheduled: Created and not submitted
Pending: Submitted to the ACH provider, but not yet settled. 
Settled: The ACH payment was pulled successfully from the customer&apos;s account 
Failed: Returned a failed response from the ACH provider</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fees Applied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Running_Balance__c</columns>
        <columns>Transaction_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Transaction_Type__c</columns>
        <columns>External_Transaction_ID__c</columns>
        <columns>Response_Code__c</columns>
        <columns>Error_Code__c</columns>
        <columns>Error_Description__c</columns>
        <columns>Payment_Method__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PMT-{0000}</displayFormat>
        <label>Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <recordTypes>
        <fullName>Credit</fullName>
        <active>true</active>
        <label>Credit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Debit</fullName>
        <active>true</active>
        <label>Debit</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>